[package]
name = "rupl"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-only"
description = "a complex graphing library"
authors = ["bgkillas <mswalhelm@gmail.com>"]
documentation = "https://docs.rs/rupl"
repository = "https://github.com/bgkillas/rupl"
homepage = "https://github.com/bgkillas/rupl"

[features]
default = ["tiny-skia", "winit"]
egui = ["dep:egui"]
skia = ["dep:skia-safe"]
tiny-skia = ["dep:tiny-skia"]
winit = ["dep:winit"]

[dependencies]
eyre = "0.6.12"
rayon = "1.10.0"
winit = { version = "0.30.9", optional = true }
egui = { version = "0.31.1", optional = true }
skia-safe = { version = "0.84.0", optional = true }
tiny-skia = {version = "0.11.4", optional = true}