[package]
name = "rupl"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-only"
description = "a complex graphing library"
authors = ["bgkillas <mswalhelm@gmail.com>"]
documentation = "https://docs.rs/rupl"
repository = "https://github.com/bgkillas/rupl"
homepage = "https://github.com/bgkillas/rupl"

[features]
default = ["skia", "winit", "rayon", "serde"]
egui = ["dep:egui"]
skia = ["dep:skia-safe"]
tiny-skia = ["dep:tiny-skia"]
winit = ["dep:winit"]
rayon = ["dep:rayon"]
serde = ["dep:serde"]

[dependencies]
rayon = { version = "1.10.0", optional = true }
winit = { version = "0.30.9", optional = true }
egui = { version = "0.31.1", optional = true }
skia-safe = { version = "0.84.0", optional = true }
tiny-skia = { version = "0.11.4", optional = true }
serde = {version = "1.0.219",features = ["derive"], optional = true }